# lexicore-typing-defense

./: CMakeLists.txt  README.md
src/: main.cpp
src/circle/: circle.cpp  circle.h
src/dynamic_text/: DynamicText.cpp  DynamicText.h  dynamic_text.cpp  dynamic_text.h
src/game/: game_manager.cpp  game_manager.h
src/heart/: heart.cpp  heart.h
src/menu/: menu.cpp  menu.h
src/timer/: timer.h
src/ui/: ui.cpp  ui.h
src/words/: .hard_words.txt  .medium_words.txt  .simple_words.txt  .unique_words.txt
